fixed color contrast issue

--- a/assets/css/main-page-green.scss
+++ b/assets/css/main-page-green.scss
@@ -1095,26 +1095,26 @@ abbr{
     -moz-osx-font-smoothing: auto;
     -webkit-font-smoothing: subpixel-antialiased;
     background-color: transparent;
-    box-shadow: inset 0 0 0 2px #4F9E99;
-    color: #4F9E99;
+    box-shadow: inset 0 0 0 2px #33827d;
+    color: #33827d;
 }
 
 .usa-button--outline:visited {
-    color: #4F9E99;
+    color: #33827d;
 }
 
 .usa-button--outline:hover, .usa-button--outline.usa-button--hover {
     background-color: transparent;
-    box-shadow: inset 0 0 0 2px #4F9E99;
+    box-shadow: inset 0 0 0 2px #33827d;
     color: #1a4480;
 }
 
 .usa-button--outline:active, .usa-button--outline.usa-button--active {
     background-color: transparent;
-    box-shadow: inset 0 0 0 2px #4F9E99;
-    color: #4F9E99;
+    box-shadow: inset 0 0 0 2px #33827d;
+    color: #33827d;
 }
 
 .usa-button--outline:hover {
-    color: #4F9E99;
+    color: #33827d;
 }
